# py_module08

./: .gitignore
ex0/: construct.py
ex1/: loading.py  pyproject.toml
ex2/: .env.example  .gitignore  oracle.py
