[tool.poetry]
name = "ex1-loading"
version = "1.0.0"
description = "Matrix Data Analysis Tool"
authors = ["orhernan <orhernan@42.madrid>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.25.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"